# ParadigmaVPN

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  README_codex_paradigma_vpn.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: deploy-site.yml
Site/: .env.example  .gitignore  README.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
Site/database/: 001_schema.sql
Site/server/: auth.js  config.js  db.js  index.js  migrate.js  seed-admin.js  telegram.js
Site/src/: App.tsx  index.css
Site/src/components/: Layout.tsx
Site/src/components/ui/: Button.tsx  Card.tsx  (+1 more)
Site/src/lib/: api.ts  i18n.tsx
Site/src/pages/: AdminDashboard.tsx  AdminLogin.tsx  Devices.tsx  Overview.tsx  Pricing.tsx  Referrals.tsx  Settings.tsx  Subscription.tsx  Support.tsx
alembic/: env.py
alembic/versions/: 20260507_0001_initial.py
app/: __init__.py  config.py  logging.py  main.py
app/bot/: dispatcher.py  polling.py
app/bot/handlers/: admin.py  instructions.py  payments.py  plans.py  start.py  subscriptions.py  trial.py
app/bot/keyboards/: common.py
app/bot/texts/: __init__.py  ru.py
app/db/: models.py  session.py
app/integrations/: marzban.py
app/payments/: base.py  manual.py
app/services/: notifications.py  payments.py  plans.py  provisioning.py  subscriptions.py  users.py
app/web/: routes.py  webhooks.py
docs/: decisions.md  deployment.md  implementation_plan.md  marzban.md  reference_bot_audit.md  todo.md
tests/: test_config.py  test_marzban.py  test_payments.py  test_provisioning.py
