[project]
name = "paradigma-vpn"
version = "0.1.0"
description = "Telegram bot and backend for Paradigma VPN"
requires-python = ">=3.12"
dependencies = [
    "aiogram>=3.5,<4",
    "alembic>=1.13,<2",
    "asyncpg>=0.29,<1",
    "fastapi>=0.111,<1",
    "httpx>=0.27,<1",
    "pydantic-settings>=2.2,<3",
    "python-json-logger>=2.0,<3",
    "qrcode[pil]>=7.4,<8",
    "redis>=5,<6",
    "sqlalchemy[asyncio]>=2.0,<3",
    "uvicorn[standard]>=0.30,<1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8,<9",
    "pytest-asyncio>=0.23,<1",
    "respx>=0.21,<1",
    "ruff>=0.5,<1",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ASYNC"]
ignore = ["B008"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["sqlalchemy.ext.mypy.plugin"]

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"
